AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/ingress/components/sas-forecasting-services/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /forecastingDataDefinition/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-forecasting-data-definition
    sas.com/admin: namespace
  name: sas-forecasting-data-definition
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-forecasting-data-definition
          servicePort: 80
        path: /forecastingDataDefinition

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /forecastingGateway/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-forecasting-gateway
    sas.com/admin: namespace
  name: sas-forecasting-gateway
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-forecasting-gateway
          servicePort: 80
        path: /forecastingGateway

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /forecastingOverrides/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-forecasting-overrides
    sas.com/admin: namespace
  name: sas-forecasting-overrides
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-forecasting-overrides
          servicePort: 80
        path: /forecastingOverrides

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /forecastingStrategies/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-forecasting-strategies
    sas.com/admin: namespace
  name: sas-forecasting-strategies
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-forecasting-strategies
          servicePort: 80
        path: /forecastingStrategies
